--- a/apps/angular-test-app/src/app/components/popover-demo/popover-demo.component.html
+++ b/apps/angular-test-app/src/app/components/popover-demo/popover-demo.component.html
@@ -7,8 +7,8 @@
 <ng-template #popoverContent>
   <div class="uxg-h5">Simple popover</div>
   <div class="uxg-body-2">
-    This popover is pretty simple. It uses Material menu to work like a popover. The benefit of this approach is it's
-    super lightweight. And it is very flexible as well.
+    This popover is pretty simple. It uses Material menu to work like a popover. The benefit of this approach is it's super lightweight. And
+    it is very flexible as well.
   </div>
   <div class="actions">
     <button mat-button color="accent" (click)="popover.close()">Close</button>
