--- a/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-advanced-example/repeater-card-advanced-example.component.html
+++ b/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-advanced-example/repeater-card-advanced-example.component.html
@@ -27,8 +27,7 @@
           <div class="section">{{ data[columnsMatcher.number] || 'number' }}</div>
         </div>
         <div class="end">
-          <span class="end-text">exp. end:</span
-          ><span class="end-date">{{ data[columnsMatcher.date] || 'MM/YY' }}</span>
+          <span class="end-text">exp. end:</span><span class="end-date">{{ data[columnsMatcher.date] || 'MM/YY' }}</span>
         </div>
         <div class="card-holder">{{ data[columnsMatcher.name] || 'name' }}</div>
         <div class="master">
