--- a/apps/angular-test-app/src/app/components/repeater-demo/repeater-demo.component.html
+++ b/apps/angular-test-app/src/app/components/repeater-demo/repeater-demo.component.html
@@ -102,9 +102,7 @@
       <td>space</td>
       <td>string</td>
       <td></td>
-      <td>
-        The space between each repeated component. It's a string as it can be expressed in different units (px, ie, etc)
-      </td>
+      <td>The space between each repeated component. It's a string as it can be expressed in different units (px, ie, etc)</td>
     </tr>
     <tr>
       <td>orienation</td>
