--- a/apps/angular-test-app/src/app/components/repeater-demo/field-matcher/field-matcher.component.html
+++ b/apps/angular-test-app/src/app/components/repeater-demo/field-matcher/field-matcher.component.html
@@ -1,10 +1,6 @@
 <mat-form-field *ngFor="let field of templateFields | keyvalue">
   <mat-label>{{ field.key }}</mat-label>
-  <mat-select
-    [compareWith]="compareWith"
-    [value]="field.value"
-    (selectionChange)="onSelectionChange($event, field.key)"
-  >
+  <mat-select [compareWith]="compareWith" [value]="field.value" (selectionChange)="onSelectionChange($event, field.key)">
     <mat-option *ngFor="let dsFields of fields" [value]="dsFields">
       {{ dsFields.name }}
     </mat-option>
