--- a/libs/angular-components/status-steps/src/lib/horizontal-status-stepper.component.html
+++ b/libs/angular-components/status-steps/src/lib/horizontal-status-stepper.component.html
@@ -9,10 +9,7 @@
         </div>
         <div class="horizontal-line" [class.last]="isLast"></div>
       </div>
-      <ng-template
-        [ngTemplateOutlet]="step.template ?? null"
-        [ngTemplateOutletContext]="{ isCurrent: isCurrent(index + 1) }"
-      ></ng-template>
+      <ng-template [ngTemplateOutlet]="step.template ?? null" [ngTemplateOutletContext]="{ isCurrent: isCurrent(index + 1) }"></ng-template>
     </div>
   </div>
   <div *ngIf="!isLast" class="horizontal-line"></div>
