--- a/apps/angular-test-app/src/app/app.component.html
+++ b/apps/angular-test-app/src/app/app.component.html
@@ -34,8 +34,8 @@
       </mat-toolbar>
       <div class="app-content">
         <router-outlet></router-outlet>
+        <uxg-scroll-to-top parentElementSelector=".app-content" [showAfter]="100"></uxg-scroll-to-top>
       </div>
-      <!-- <uxg-scroll-to-top parentElementSelector="mat-sidenav-content" [showAfter]="100"></uxg-scroll-to-top> -->
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
