--- a/libs/angular-theme/lib/avatar/_avatar-theme.scss
+++ b/libs/angular-theme/lib/avatar/_avatar-theme.scss
@@ -52,7 +52,8 @@
   }
 
   .uxg-avatar-list {
-    > li, > uxg-avatar {
+    > li,
+    > uxg-avatar {
       > .uxg-avatar {
         border: 1px solid;
         @include fds.property(border-color, background);
