--- a/libs/angular-theme/lib/avatar/_avatar.scss
+++ b/libs/angular-theme/lib/avatar/_avatar.scss
@@ -50,7 +50,8 @@ $avatar-size-dense: $uxg-spacing-4;
     margin: 0;
   }
 
-  li, uxg-avatar {
+  li,
+  uxg-avatar {
     display: inline-grid;
     margin: 0;
     position: relative;
@@ -70,13 +71,15 @@ $avatar-size-dense: $uxg-spacing-4;
   }
 
   &[dense] {
-    li, uxg-avatar {
+    li,
+    uxg-avatar {
       width: math.div($avatar-size-dense, 1.5);
     }
   }
 
   &[large] {
-    li, uxg-avatar {
+    li,
+    uxg-avatar {
       width: math.div($avatar-size-large, 1.5);
     }
   }
