--- a/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-example/repeater-card-example.component.scss
+++ b/apps/angular-test-app/src/app/components/repeater-demo/repeater-card-example/repeater-card-example.component.scss
@@ -1,12 +1,10 @@
-
-.card-demo{
-    &.simple-card{
-        width: 240px;
-        max-height: 430px;
-    }
-    &.simple-card:hover{
-        background-color: rgba(0,0,0,0.05);
-    }
-    cursor: pointer;
+.card-demo {
+  &.simple-card {
+    width: 240px;
+    max-height: 430px;
+  }
+  &.simple-card:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+  }
+  cursor: pointer;
 }
-
