--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -1,4 +1,4 @@
-@use "angular-theme" as fds;
+@use 'angular-theme' as fds;
 
 html,
 body {
@@ -7,7 +7,7 @@ body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 section {
