--- a/libs/angular-components/global-nav/src/components/navbar/navbar.component.scss
+++ b/libs/angular-components/global-nav/src/components/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
-@use "sass:map";
-@use "../../variables";
+@use 'sass:map';
+@use '../../variables';
 
 uxg-navbar {
   position: unset;
@@ -10,7 +10,8 @@ uxg-navbar {
   position: relative;
 }
 
-.uxg-nav-list.mat-nav-list.mat-list-base > .mat-list-item:last-of-type, .uxg-nav-list-level.mat-nav-list.mat-list-base > .mat-list-item:last-of-type {
+.uxg-nav-list.mat-nav-list.mat-list-base > .mat-list-item:last-of-type,
+.uxg-nav-list-level.mat-nav-list.mat-list-base > .mat-list-item:last-of-type {
   margin-bottom: 0px !important;
 }
 
