--- a/libs/angular-theme/_index.scss
+++ b/libs/angular-theme/_index.scss
@@ -17,20 +17,24 @@
 
 @include mat.core();
 
-$dark-theme: mat.define-dark-theme((
- color: (
-    primary: mat.define-palette(palette.$primary-dark-palette),
-    accent: mat.define-palette(palette.$secondary-dark-palette),
- ),
-  typography: mat.define-typography-config()
-));
+$dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: mat.define-palette(palette.$primary-dark-palette),
+      accent: mat.define-palette(palette.$secondary-dark-palette)
+    ),
+    typography: mat.define-typography-config()
+  )
+);
 
-$light-theme: mat.define-light-theme((
- color: (
-    primary: mat.define-palette(palette.$primary-light-palette),
-    accent: mat.define-palette(palette.$secondary-light-palette),
- )
-));
+$light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: mat.define-palette(palette.$primary-light-palette),
+      accent: mat.define-palette(palette.$secondary-light-palette)
+    )
+  )
+);
 
 @include mat.all-component-themes($light-theme);
 
