--- a/libs/angular-theme/lib/block/_title-base.scss
+++ b/libs/angular-theme/lib/block/_title-base.scss
@@ -11,7 +11,12 @@ $title-block-margin-small: $uxg-spacing-1;
     margin-right: $uxg-spacing-2;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     margin: 0;
     padding-top: $uxg-spacing-2;
   }
@@ -24,7 +29,12 @@ $title-block-margin-small: $uxg-spacing-1;
     margin: auto;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     margin: 0;
     margin-top: $uxg-spacing-3;
     padding-bottom: $uxg-spacing-1;
