--- a/libs/angular-theme/lib/breadcrumb/_breadcrumb-theme.scss
+++ b/libs/angular-theme/lib/breadcrumb/_breadcrumb-theme.scss
@@ -12,7 +12,7 @@
       text-decoration: none;
     }
 
-    &[color=primary] {
+    &[color='primary'] {
       color: mat.get-color-from-palette($primary, default);
 
       a {
@@ -25,7 +25,7 @@
       }
     }
 
-    &[color=accent] {
+    &[color='accent'] {
       color: mat.get-color-from-palette($accent, default);
 
       a {
