--- a/libs/angular-theme/lib/core/theming/_palette.scss
+++ b/libs/angular-theme/lib/core/theming/_palette.scss
@@ -9,7 +9,7 @@ $primary-light-palette: (
   contrast: (
     100: map.get(light.$tokens, on-primary),
     500: map.get(light.$tokens, on-primary),
-    700: map.get(light.$tokens, on-primary),
+    700: map.get(light.$tokens, on-primary)
   )
 );
 
@@ -20,7 +20,7 @@ $secondary-light-palette: (
   contrast: (
     100: map.get(light.$tokens, on-secondary),
     500: map.get(light.$tokens, on-secondary),
-    700: map.get(light.$tokens, on-secondary),
+    700: map.get(light.$tokens, on-secondary)
   )
 );
 
@@ -31,7 +31,7 @@ $primary-dark-palette: (
   contrast: (
     100: map.get(dark.$tokens, on-primary),
     500: map.get(dark.$tokens, on-primary),
-    700: map.get(dark.$tokens, on-primary),
+    700: map.get(dark.$tokens, on-primary)
   )
 );
 
@@ -42,6 +42,6 @@ $secondary-dark-palette: (
   contrast: (
     100: map.get(dark.$tokens, on-secondary),
     500: map.get(dark.$tokens, on-secondary),
-    700: map.get(dark.$tokens, on-secondary),
+    700: map.get(dark.$tokens, on-secondary)
   )
 );
