--- a/libs/angular-theme/lib/prebuilt-theme/_dark.scss
+++ b/libs/angular-theme/lib/prebuilt-theme/_dark.scss
@@ -11,17 +11,17 @@
 
 @import '../../base';
 
-
 @include mat.core();
 
-
-$dark-theme: mat.define-dark-theme((
- color: (
-    primary: mat.define-palette(palette.$primary-dark-palette),
-    accent: mat.define-palette(palette.$secondary-dark-palette),
- ),
-  typography: mat.define-typography-config()
-));
+$dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: mat.define-palette(palette.$primary-dark-palette),
+      accent: mat.define-palette(palette.$secondary-dark-palette)
+    ),
+    typography: mat.define-typography-config()
+  )
+);
 
 @include avatar.color();
 @include icon.color();
