--- a/libs/angular-theme/lib/prebuilt-theme/_light.scss
+++ b/libs/angular-theme/lib/prebuilt-theme/_light.scss
@@ -11,17 +11,17 @@
 
 @import '../../base';
 
-
 @include mat.core();
 
-
-$light-theme: mat.define-light-theme((
- color: (
-    primary: mat.define-palette(palette.$primary-light-palette),
-    accent: mat.define-palette(palette.$secondary-light-palette),
- ),
-  typography: mat.define-typography-config()
-));
+$light-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: mat.define-palette(palette.$primary-light-palette),
+      accent: mat.define-palette(palette.$secondary-light-palette)
+    ),
+    typography: mat.define-typography-config()
+  )
+);
 
 @include avatar.color();
 @include icon.color();
