--- a/libs/angular-theme/lib/tabs/_tabs-theme.scss
+++ b/libs/angular-theme/lib/tabs/_tabs-theme.scss
@@ -1,16 +1,16 @@
 @use 'sass:map';
-@use '@angular/material'as mat;
+@use '@angular/material' as mat;
 @use '../core/theming/palette';
 
 @mixin uxg-tabs-bgcolor($color-name, $color) {
   $bg-color: palette.get-color-from-palette($color, $color-name);
 
-  &[activeTabBgColor=#{$color-name}] {
-    &>.mat-tab-body-wrapper {
+  &[activeTabBgColor='#{$color-name}'] {
+    & > .mat-tab-body-wrapper {
       background-color: $bg-color;
     }
 
-    &>.mat-tab-header {
+    & > .mat-tab-header {
       .mat-tab-label {
         &.mat-tab-label-active {
           .mat-tab-label-content {
@@ -39,7 +39,7 @@
   $default-bg: palette.get-color-from-palette($background, card);
 
   .uxg-tabs {
-    &>.mat-tab-header {
+    & > .mat-tab-header {
       border-bottom: 0;
 
       .mat-tab-labels::after {
@@ -84,13 +84,11 @@
       }
     }
 
-    &>.mat-tab-body-wrapper {
+    & > .mat-tab-body-wrapper {
       background-color: $default-bg;
     }
 
-
-
-    &.inactive-tabs-on-dark>.mat-tab-header {
+    &.inactive-tabs-on-dark > .mat-tab-header {
       .mat-tab-label {
         &:not(.mat-tab-label-active) {
           color: white;
@@ -106,7 +104,7 @@
       }
       .mat-tab-header-pagination-chevron {
         opacity: 0.6;
-        border-color: rgba(white, 0.6)
+        border-color: rgba(white, 0.6);
       }
     }
 
