--- a/apps/angular-test-app/src/styles.scss
+++ b/apps/angular-test-app/src/styles.scss
@@ -1,6 +1,6 @@
 @use 'angular-theme' as fds;
 
-@use "angular-components/toaster/src/toaster.theme" as toaster;
+@use 'angular-components/toaster/src/toaster.theme' as toaster;
 
 @include toaster.color();
 
