button toggle update

--- a/libs/angular-theme/lib/button-toggle/_button-toggle.scss
+++ b/libs/angular-theme/lib/button-toggle/_button-toggle.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
 @use '../core/style/spacing' as *;
-@use '../icon/icon-base' as *;
+@use '../icon/icon' as *;
 
 $button-toggle-margin: $uxg-spacing-2;
 $button-toggle-icon-dense: 18px;
