--- a/libs/angular-theme/_base.scss
+++ b/libs/angular-theme/_base.scss
@@ -1,4 +1,5 @@
 @import './lib/avatar/avatar';
+@import './lib/button-toggle/button-toggle';
 @import './lib/breadcrumb/breadcrumb';
 @import './lib/button/button';
 @import './lib/icon/icon';
