--- a/libs/angular-theme/_index.scss
+++ b/libs/angular-theme/_index.scss
@@ -9,6 +9,7 @@
 @forward './lib/core/layout/breakpoints';
 
 @use './lib/avatar/avatar-theme' as avatar;
+@use './lib/button-toggle/button-toggle-theme' as button-toggle;
 @use './lib/icon/icon-theme' as icon;
 @use './lib/link/link-theme' as link;
 @use './lib/button/button-theme' as button;
@@ -17,13 +18,15 @@
 
 @include mat.core();
 
+$typography-config: mat.define-typography-config();
+
 $dark-theme: mat.define-dark-theme(
   (
     color: (
       primary: mat.define-palette(palette.$primary-dark-palette),
       accent: mat.define-palette(palette.$secondary-dark-palette)
     ),
-    typography: mat.define-typography-config()
+    typography: $typography-config
   )
 );
 
@@ -46,6 +49,7 @@ $light-theme: mat.define-light-theme(
 }
 
 @include avatar.theme();
+@include button-toggle.theme($typography-config);
 @include icon.color();
 @include link.color();
 @include button.theme();
